fix scala version conflict

--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,13 @@
         <dependency>
             <groupId>org.scalacheck</groupId>
             <artifactId>scalacheck_${scala.binary.version}</artifactId>
-            <version>${scalacheck.version}</version>
+            <version>1.14.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-xml_2.11</artifactId>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 
