--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,8 +2,9 @@ align = some
 danglingParentheses        = true
 indentOperator             = spray
 maxColumn                  = 120
-lineEndings                = unix
+lineEndings                = preserve
 project.excludeFilters     = [".*\\.sbt"]
 rewrite.rules              = [AsciiSortImports, RedundantBraces, RedundantParens]
 spaces.inImportCurlyBraces = true
 unindentTopLevelOperators  = true
+
